ENYO-6441: Fixed truncated label of ImageItem in RTL case (#186)
* ENYO-6441: Fixed truncated label of ImageItem in RTL case

* added a change log

* Remove the redundant code

--- a/ImageItem/ImageItem.module.less
+++ b/ImageItem/ImageItem.module.less
@@ -14,11 +14,14 @@
 	}
 
 	.caption {
-		.sand-text-base(@sand-imageitem-caption-font-size);
+		font-size: @sand-imageitem-caption-font-size;
+		line-height: @sand-imageitem-caption-line-height;
 	}
 
 	.label {
-		.sand-text-base(@sand-imageitem-label-font-size);
+		font-size: @sand-imageitem-label-font-size;
+		line-height: @sand-imageitem-label-line-height;
+		margin-top: @sand-imageitem-label-margin-top;
 	}
 
 	.selectionContainer {
@@ -90,6 +93,10 @@
 			width: @sand-imageitem-horizontal-image-width;
 			height: @sand-imageitem-horizontal-image-height;
 			margin: @sand-imageitem-horizontal-image-margin;
+
+			:global(.enact-locale-right-to-left) & {
+				margin: @sand-imageitem-horizontal-image-margin-rtl;
+			}
 		}
 
 		.selectionIcon {
